# AndroidSynth

./: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/fluidsynth/include/fluidsynth/: seq.h
app/src/main/cpp/fluidsynth/lib/arm64-v8a/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/lib/x86/cmake/fluidsynth/: FluidSynthConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/x86/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/lib/x86_64/pkgconfig/: fluidsynth.pc
app/src/main/java/com/example/project2/: MainActivity.kt  MyApplication.kt  NaviGraph.kt  Navigation.kt
app/src/main/java/com/example/project2/ChatScreen/: ChatItems.kt  ChatScreen.kt  ChatSelectScreen.kt  ChatViewModel.kt
app/src/main/java/com/example/project2/FrontPage/: FrontItems.kt  FrontScreen.kt  TitleSelectScreen.kt  TitleSelectViewModel.kt
app/src/main/java/com/example/project2/LoginPage/: LoginPage.kt  LoginViewModel.kt
app/src/main/java/com/example/project2/MusicEditScreen/: MusicEditItems.kt  MusicEditScreen.kt
app/src/main/java/com/example/project2/MusicGenPage/: MusicGenItems.kt  MusicGenRepository.kt  MusicGenScreen.kt  MusicGenViewModel.kt
app/src/main/java/com/example/project2/SynthPage/: ChordItems.kt  ControlButtons.kt  DrumItems.kt  MusicInfoItem.kt  MusicViewModel.kt  SynthItems.kt  SynthScreen.kt  SynthUtils.kt
app/src/main/java/com/example/project2/data/: AppDatabase.kt  ChatDataTest.kt  ChatState.kt  DataBaseClass.kt  DataBaseHelper.kt  DataBaseRepository.kt  DatabaseModule.kt  DatasetDao.kt  TaskRepository.kt  UserManager.kt
app/src/main/java/com/example/project2/data/database/: Dialogue.kt  MidiFile.kt  MusicGenerated.kt  Session.kt  User.kt
app/src/main/java/com/example/project2/data/network/: ChatInternet.kt  NetworkDataSource.kt  NetworkTask.kt
app/src/main/java/com/example/project2/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: apple_fill.xml  b1.xml  b2.xml  b4.xml  bg.xml  bgl.xml  bgl2.xml  collision_flat.xml  d2.xml  d3.xml  d4.xml  d5.xml  drum_key_selected.xml  drum_key_unselected.xml  end.xml  front.xml  github.xml  google.xml  ic_launcher_foreground.xml  microsoft.xml  o.xml  rec.xml  refresh.xml  rhythm.xml  save.xml  start.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
